@@ -4531,7 +4531,7 @@ After typesetting, the library appears in the document as follows (with
 one subsection for each procedure):
 
 @c include of docu for template.lib
-@include ./d2t_singular/template_lib.tex
+@include d2t_singular/template_lib.tex
 
 @c ----------------------------------------------------------------------
 @node Debugging tools,  , Guidelines for writing a library, General concepts
